Add Supabase env vars on Vercel

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Bestway Jobs Schedule</title>
+    <title>Bestway Jobs Schedule — v2</title>
 
     <!-- Icons / favicon -->
     <link rel="icon" type="image/png" href="/icons/icon-192.png" />
